[gd_scene load_steps=3 format=2]

[ext_resource path="res://Hearts.gd" type="Script" id=1]
[ext_resource path="res://Assets/img/Heart.png" type="Texture" id=2]

[node name="Hearts" type="HBoxContainer"]
margin_left = 8.0
margin_right = 72.0
margin_bottom = 16.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart1" type="TextureRect" parent="."]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 2 )
stretch_mode = 3

[node name="Heart2" type="TextureRect" parent="."]
margin_left = 20.0
margin_right = 36.0
margin_bottom = 16.0
texture = ExtResource( 2 )
stretch_mode = 3

[node name="Heart3" type="TextureRect" parent="."]
margin_left = 40.0
margin_right = 56.0
margin_bottom = 16.0
texture = ExtResource( 2 )
stretch_mode = 3
